# evolux_challenge

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
app/migrations/versions/: af27c19f8c51_.py
app/modules/number/: views.py
infra/dev/: Dockerfile  docker-compose.yml  evolux_challenge.postman_collection.json
infra/prod/: Dockerfile  docker-compose.yml  requirements.txt
tests/: test_flask_base.py  test_number.py  test_user.py
